l10n: state of Mozilla, avoid last floasting tab flowing to a second rowif the translated string for FAQ is too long (Slovenian /ex)
git-svn-id: svn+ssh://svn.mozilla.org/projects/mozilla.com/trunk@96179 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/style/covehead/annualreport.css
+++ b/style/covehead/annualreport.css
@@ -181,6 +181,8 @@ h6 { font-size: 20px; }
     position: relative;
     margin: 0 0 0 -1px;
     padding: 0;
+    max-width: 142px;
+    white-space: pre;
 }
 
 .nav-main li a,
